--- a/.github/actions/tests/argocd-tests/action.yml
+++ b/.github/actions/tests/argocd-tests/action.yml
@@ -70,25 +70,6 @@ runs:
         role-to-assume: ${{ env.AWS_ROLE_ARN_ }}
         aws-region: "eu-central-1"
 
-    - name: checkout pc-tests ref_name branch
-      id: pc-tests
-      uses: actions/checkout@v4
-      continue-on-error: true
-      with:
-        repository: input-output-hk/sidechains-tests
-        token: ${{ env.ACTIONS_PAT }}
-        ref: ${{ github.head_ref || github.ref_name }}
-        path: e2e-tests
-
-    - name: checkout pc-tests master (fallback)
-      if: steps.pc-tests.outcome == 'failure'
-      uses: actions/checkout@v4
-      with:
-        repository: input-output-hk/sidechains-tests
-        token: ${{ env.ACTIONS_PAT }}
-        ref: master
-        path: e2e-tests
-
     - name: Setup earthly
       uses: earthly/actions-setup@v1
       with:
@@ -104,7 +85,7 @@ runs:
         JIRA_URL: ${{ env.JIRA_URL }}
         JOB_URL: "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
       run: |
-        cd e2e-tests
+        cd E2E-tests
         earthly --secret AWS_SESSION_TOKEN="$AWS_SESSION_TOKEN" \
                 --secret AWS_ACCESS_KEY_ID="$AWS_ACCESS_KEY_ID" \
                 --secret AWS_SECRET_ACCESS_KEY="$AWS_SECRET_ACCESS_KEY" \
