--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,12 +101,11 @@ jobs:
     if: always() && needs.local-environment-tests.result != 'skipped'
     runs-on: ubuntu-latest
     steps:
-      - name: checkout pc-tests master
+      - name: Checkout
         uses: actions/checkout@v4
         with:
-          repository: input-output-hk/sidechains-tests
-          token: ${{ secrets.ACTIONS_PAT }}
-          ref: master
+          fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.sha || github.sha }}
       - name: Download test report
         uses: actions/download-artifact@v4
         with:
@@ -121,6 +120,8 @@ jobs:
           github_actor_username: ${{ github.actor }}
           env: local-pre-merge
         run: |
+          mv .report.json E2E-tests/.report.json
+          cd E2E-tests
           ./report_slack.sh $repository $slack_ref_name $job_url $env $github_actor_username null
         shell: bash
 
@@ -277,7 +278,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          # Use the merge commit SHA for post-merge testing
           ref: ${{ github.event.pull_request.merge_commit_sha || github.sha }}
       - name: Deploy and test against local environment
         uses: ./.github/actions/tests/local-environment-tests
@@ -300,12 +300,11 @@ jobs:
     if: always() && needs.local-environment-tests-post-merge.result != 'skipped'
     runs-on: ubuntu-latest
     steps:
-      - name: checkout pc-tests master
+      - name: Checkout
         uses: actions/checkout@v4
         with:
-          repository: input-output-hk/sidechains-tests
-          token: ${{ secrets.ACTIONS_PAT }}
-          ref: master
+          fetch-depth: 0
+          ref: ${{ github.event.pull_request.merge_commit_sha || github.sha }}
       - name: Download test report
         uses: actions/download-artifact@v4
         with:
@@ -320,6 +319,8 @@ jobs:
           github_actor_username: ${{ github.actor }}
           env: local-post-merge
         run: |
+          mv .report.json E2E-tests/.report.json
+          cd E2E-tests
           ./report_slack.sh $repository $slack_ref_name $job_url $env $github_actor_username null
         shell: bash
 
