--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -40,7 +40,7 @@ env:
   STAGING_PREVIEW_VALIDATOR_1_PORT: 9933
 
 jobs:
-  build-linux:
+  build-linux-x86_64:
     permissions:
       id-token: write
       contents: write
@@ -50,12 +50,29 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ inputs.sha }}
-      - name: Build and Upload for Linux
+      - name: Build and Upload for Linux x86_64
         uses: ./.github/actions/artifacts/build-pc-artifacts
         with:
           sha: ${{ inputs.sha }}
           tag: ${{ inputs.tag }}
-          os: linux
+          os: linux-x86_64
+
+  build-linux-arm64:
+    permissions:
+      id-token: write
+      contents: write
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ inputs.sha }}
+      - name: Build and Upload for Linux arm64
+        uses: ./.github/actions/artifacts/build-pc-artifacts
+        with:
+          sha: ${{ inputs.sha }}
+          tag: ${{ inputs.tag }}
+          os: linux-arm64
 
   build-macos-x86_64:
     if: ${{ github.event.inputs.no-release != 'true' }}
@@ -97,7 +114,7 @@ jobs:
     permissions:
       id-token: write
       contents: write
-    needs: build-linux
+    needs: build-linux-x86_64
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -118,7 +135,8 @@ jobs:
       id-token: write
       contents: write
     needs:
-      - build-linux
+      - build-linux-x86_64
+      - build-linux-arm64
       - build-macos-x86_64
       - build-macos-arm64
     runs-on: ubuntu-latest
@@ -136,7 +154,7 @@ jobs:
     permissions:
       id-token: write
       contents: write
-    needs: build-linux
+    needs: build-linux-x86_64
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -428,7 +446,8 @@ jobs:
       contents: write
       packages: write
     needs:
-      - build-linux
+      - build-linux-x86_64
+      - build-linux-arm64
       - build-macos-x86_64
       - build-macos-arm64
       - run-all-tests-on-n2-epoch
