--- a/toolkit/pallets/sidechain/Cargo.toml
+++ b/toolkit/pallets/sidechain/Cargo.toml
@@ -20,6 +20,7 @@ log = { workspace = true }
 
 [dev-dependencies]
 sp-io = { workspace = true }
+hex-literal = { workspace = true }
 
 [features]
 default = ["std"]
