e2e-tests/ fix path to debug log

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -135,6 +135,7 @@ jobs:
     - name: Add Line Numbers and Timestamps to debug.log
       if: always()
       run: |
+        cd E2E-tests
         awk '{print strftime("[%Y-%m-%d %H:%M:%S]"), $0}' debug.log > debug_with_timestamps.log
         nl -ba -s '  ' -w 8 debug_with_timestamps.log > debug_with_timestamps_and_line_numbers.log
         mv debug_with_timestamps_and_line_numbers.log debug.log
@@ -146,7 +147,7 @@ jobs:
         name: debug_log
         retention-days: 15
         overwrite: true
-        path: debug.log
+        path: E2E-tests/debug.log
 
     - name: Setup Node
       uses: actions/setup-node@v4
