--- a/.github/workflows/devnet.yml
+++ b/.github/workflows/devnet.yml
@@ -59,10 +59,10 @@ jobs:
     - name: checkout code
       uses: actions/checkout@v4
       with:
-        ref: ${{ github.event_name == 'workflow_dispatch' && github.ref_name || 'v1.2.0' }}
+        ref: ${{ github.event_name == 'workflow_dispatch' && github.ref_name || 'master' }}
 
     - name: Set deployment_version as env variable
-      run: echo "DEPLOYMENT_VERSION=$(jq -r .deployment_version ./config/substrate/devnet_nodes.json)" >> $GITHUB_ENV
+      run: echo "DEPLOYMENT_VERSION=$(jq -r .deployment_version ./E2E-tests/config/substrate/devnet_nodes.json)" >> $GITHUB_ENV
 
     - name: Set XRay variables
       run: |
@@ -89,7 +89,7 @@ jobs:
       env:
         EARTHLY_BUILD_ARGS: "CI_RUN=true"
         FORCE_COLOR: 1
-        SLACK_REF_NAME: ${{ github.event_name == 'schedule' && format('{0}/v{1}', env.TEST_ENVIRONMENT, env.DEPLOYMENT_VERSION) || github.ref_name }}
+        SLACK_REF_NAME: ${{ github.event_name == 'schedule' && format('{0}/{1}', env.TEST_ENVIRONMENT, env.DEPLOYMENT_VERSION) || github.ref_name }}
         LOG_LEVEL: ${{ inputs.log_level }}
         KEYWORD: ${{ inputs.keyword }}
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
@@ -131,6 +131,14 @@ jobs:
           --decrypt=true \
           --markers="$MARKERS"
 
+    - name: Add Line Numbers and Timestamps to debug.log
+      if: always()
+      run: |
+        cd E2E-tests
+        awk '{print strftime("[%Y-%m-%d %H:%M:%S]"), $0}' debug.log > debug_with_timestamps.log
+        nl -ba -s '  ' -w 8 debug_with_timestamps.log > debug_with_timestamps_and_line_numbers.log
+        mv debug_with_timestamps_and_line_numbers.log debug.log
+
     - name: Archive Debug Log
       if: always()
       uses: actions/upload-artifact@v4
@@ -138,7 +146,7 @@ jobs:
         name: debug_log
         retention-days: 15
         overwrite: true
-        path: debug.log
+        path: E2E-tests/debug.log
 
     - name: Setup Node
       uses: actions/setup-node@v4
