--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
 	"node/runtime",
 	"toolkit/cli/commands",
 	"toolkit/cli/node-commands",
+	"toolkit/cli/smart-contracts-commands",
 	"toolkit/client/consensus/aura",
 	"toolkit/pallets/block-rewards",
 	"toolkit/pallets/pallet-session-runtime-stub",
@@ -219,3 +220,4 @@ pallet-partner-chains-session = { path = "toolkit/pallets/partner-chains-session
 pallet-session-runtime-stub = { path = "toolkit/pallets/pallet-session-runtime-stub", default-features = false }
 partner-chains-cardano-offchain = { path = "toolkit/offchain", default-features = false }
 partner-chains-plutus-data = { path = "toolkit/primitives/plutus-data", default-features = false }
+partner-chains-smart-contracts-commands = { path = "toolkit/cli/smart-contracts-commands", default-features = false }
