chore: set nightly tests to run on v1.3.0

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -60,7 +60,7 @@ jobs:
     - name: checkout code
       uses: actions/checkout@v4
       with:
-        ref: ${{ github.event_name == 'workflow_dispatch' && github.ref_name || 'master' }}
+        ref: ${{ github.event_name == 'workflow_dispatch' && github.ref_name || 'v1.3.0' }}
 
     - name: Set deployment_version as env variable
       run: echo "DEPLOYMENT_VERSION=$(jq -r .deployment_version ./E2E-tests/config/substrate/staging_nodes.json)" >> $GITHUB_ENV
