--- a/Cargo.toml
+++ b/Cargo.toml
@@ -87,6 +87,7 @@ quickcheck_macros = { version = "1" }
 quote = "1.0"
 rand_chacha = { version = "0.3.1", default-features = false }
 rand = { version = "0.8.5", default-features = false }
+tokio-retry = { version = "0.3" }
 secp256k1 = { version = "0.28.2", default-features = false }
 serde = { version = "1.0.209", default-features = false, features = ["derive", "alloc"] }
 serde_json = { version = '1.0.132', default-features = false, features = ["alloc"] }
