--- a/toolkit/primitives/mock-types/Cargo.toml
+++ b/toolkit/primitives/mock-types/Cargo.toml
@@ -3,6 +3,7 @@ name = "mock-types"
 version = "1.3.0"
 edition = "2021"
 description = "Shared mock type definitions for reuse in multiple crates"
+license = "Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
