--- a/toolkit/mainchain-follower/mock/Cargo.toml
+++ b/toolkit/mainchain-follower/mock/Cargo.toml
@@ -3,6 +3,7 @@ name = "main-chain-follower-mock"
 version = "1.3.0"
 edition = "2021"
 publish = false
+license = "Apache-2.0"
 
 [dependencies]
 async-trait = { workspace = true }
