--- a/toolkit/pallets/block-rewards/Cargo.toml
+++ b/toolkit/pallets/block-rewards/Cargo.toml
@@ -3,6 +3,7 @@ name = "pallet-block-rewards"
 version = "1.3.0"
 edition = "2021"
 description = "Pallet to track due block rewards"
+license = "Apache-2.0"
 
 [dependencies]
 frame-support = { workspace = true }
