--- a/toolkit/pallets/native-token-management/Cargo.toml
+++ b/toolkit/pallets/native-token-management/Cargo.toml
@@ -3,6 +3,7 @@ name = "pallet-native-token-management"
 version = "1.3.0"
 edition = "2021"
 description = "Pallet responsible for handling changes to the illiquid supply of the native token on main chain."
+license = "Apache-2.0"
 
 [dependencies]
 frame-support = { workspace = true }
