--- a/toolkit/pallets/session-validator-management/rpc/Cargo.toml
+++ b/toolkit/pallets/session-validator-management/rpc/Cargo.toml
@@ -2,6 +2,7 @@
 name = "pallet-session-validator-management-rpc"
 version = "1.3.0"
 edition = "2021"
+license = "Apache-2.0"
 
 [dependencies]
 derive-new = { workspace = true }
