--- a/toolkit/primitives/domain/Cargo.toml
+++ b/toolkit/primitives/domain/Cargo.toml
@@ -3,6 +3,7 @@ name = "sidechain-domain"
 version = "1.3.0"
 authors = [ "Nikolaos Dymitriadis <nikolaos.dymitriadis@iohk.io>" ]
 edition = "2021"
+license = "Apache-2.0"
 
 [dependencies]
 sp-core = { workspace = true, features = ["serde"] }
