--- a/toolkit/primitives/selection/Cargo.toml
+++ b/toolkit/primitives/selection/Cargo.toml
@@ -4,6 +4,7 @@ version = "1.3.0"
 description = "Selection logic for sidechain validators"
 edition = "2021"
 publish = false
+license = "Apache-2.0"
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
