--- a/toolkit/primitives/session-validator-management/query/Cargo.toml
+++ b/toolkit/primitives/session-validator-management/query/Cargo.toml
@@ -2,6 +2,7 @@
 name = "sp-session-validator-management-query"
 version = "1.3.0"
 edition = "2021"
+license = "Apache-2.0"
 
 [dependencies]
 parity-scale-codec = { workspace = true }
