--- a/toolkit/primitives/sidechain-mc-hash/Cargo.toml
+++ b/toolkit/primitives/sidechain-mc-hash/Cargo.toml
@@ -3,6 +3,7 @@ name = "sidechain-mc-hash"
 version = "1.3.0"
 edition = "2021"
 description = "Logic for putting a main chain block reference in digest and inherent data"
+license = "Apache-2.0"
 
 [dependencies]
 async-trait = { workspace = true }
