--- a/toolkit/utils/plutus/Cargo.toml
+++ b/toolkit/utils/plutus/Cargo.toml
@@ -3,6 +3,7 @@ name = "plutus"
 version = "1.3.0"
 edition = "2021"
 publish = false
+license = "Apache-2.0"
 
 [dependencies]
 hex = { workspace = true }
