--- a/toolkit/cli/smart-contracts-commands/Cargo.toml
+++ b/toolkit/cli/smart-contracts-commands/Cargo.toml
@@ -13,3 +13,6 @@ jsonrpsee = { workspace = true, features = ["client-core", "http-client", "macro
 tokio = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+log = { workspace = true }
+env_logger = { workspace = true }
+log4rs = { workspace = true }
