--- a/.github/actions/deploy/deploy-staging-preprod/action.yml
+++ b/.github/actions/deploy/deploy-staging-preprod/action.yml
@@ -13,12 +13,8 @@ outputs: {}
 runs:
   using: "composite"
   steps:
-    - name: Checkout sidechains-infra-priv repo
+    - name: Checkout repo
       uses: actions/checkout@v4
-      with:
-        repository: input-output-hk/sidechains-infra-priv
-        token: ${{ env.ACTIONS_PAT }}
-        path: sidechains-infra-priv
 
     - name: Acquire AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
@@ -78,7 +74,7 @@ runs:
 
     - name: Deploy with chain-spec and image override
       run: |
-        cd sidechains-infra-priv/src/kube/helm/partner-chains-node-chart/
+        cd ./dev/helm/partner-chains-node-chart/
         helm upgrade --install staging-preprod-validator-1 . -f values/chains/staging-preprod.yaml -f values/nodes/staging-preprod/validator/staging-preprod-validator-1 --set images.substrateNode="${{ inputs.image }}" --set chain.chainspec_secretName="staging-preprod-chain-spec-${{ inputs.sha }}"
         helm upgrade --install staging-preprod-validator-2 . -f values/chains/staging-preprod.yaml -f values/nodes/staging-preprod/validator/staging-preprod-validator-2 --set images.substrateNode="${{ inputs.image }}" --set chain.chainspec_secretName="staging-preprod-chain-spec-${{ inputs.sha }}"
         helm upgrade --install staging-preprod-validator-3 . -f values/chains/staging-preprod.yaml -f values/nodes/staging-preprod/validator/staging-preprod-validator-3 --set images.substrateNode="${{ inputs.image }}" --set chain.chainspec_secretName="staging-preprod-chain-spec-${{ inputs.sha }}"
